add base grid and image

--- a/CV/index.html
+++ b/CV/index.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
-    <link rel="stylesheet" href="./resoursec/css/main.css" link>
+    <link rel="stylesheet" href="./resources/css/main.css" link>
 </head>
 <body>
-    <h1 >TestH1here </h1>
-    <div class="left-top">
-        Lorem ipsum dolor sit amet.
-        Sed ea quos dolor praesentium.
-        Voluptas sapiente beatae assumenda debitis!
+<div class="main-page">
+    <div class="left-color-box"></div>
+    <div class="photo">
+        <img class="avatar-img" src="/CV/resources/img/avatar.png" alt="avatar photo">
     </div>
-    <p>Some species live in houses where they hunt insects attracted by artificial light.</p>
+    <div class="author">
+        <p class="author-name">Кот
+            <br>Котовский</p>
+            <p class="job-title">КОТ Шерстяной</p>
+        <div class="left-top">
+            Lorem ipsum dolor sit amet.
+            Sed ea quos dolor praesentium.
+            Voluptas sapiente beatae assumenda debitis!
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
