left color block and dots

--- a/CV/index.html
+++ b/CV/index.html
@@ -12,15 +12,85 @@
     <div class="photo">
         <img class="avatar-img" src="/CV/resources/img/avatar.png" alt="avatar photo">
     </div>
-    <div class="author">
-        <p class="author-name">Кот
-            <br>Котовский</p>
-            <p class="job-title">КОТ Шерстяной</p>
-        <div class="left-top">
-            Lorem ipsum dolor sit amet.
-            Sed ea quos dolor praesentium.
-            Voluptas sapiente beatae assumenda debitis!
+    <div class="contact-block">
+        <p class="contact">Контакты</p>
+        <div class="dash-div">
+            <hr class="dash dash-white">
         </div>
+        <div class="phone">Телефон
+            <br> 8-800-MR-CAT
+        </div>
+        <div class="address">Мой адрес:
+            <br> не дом
+            <br> и не улица
+        </div>
+    </div>
+    <div class="about-me-block">
+        <p class="about-me">Обо мне</p>
+        <div class="dash-div">
+            <hr class="dash">
+        </div>
+        <div>Lorem ipsum dolor sit amet.
+            Nobis non alias omnis excepturi.
+            Deserunt soluta exercitationem numquam commodi?
+            Nisi nemo similique aperiam ipsam.
+            Voluptatem autem maiores quibusdam excepturi.
+            Praesentium facere delectus aperiam rem.
+        </div>
+    </div>
+    <div class="vaccine-block">
+        <p class="vaccine">Вакцинация</p>
+        <div class="dash-div">
+            <hr class="dash">
+        </div>
+        <span class="date-period">2019 - н.в</span>
+        <p class="vaccine-harmful">От вредности</p>
+        <span class="date-period">2019 - 2020</span>
+        <p class="vaccine-rabies">От бешенства</p>
+    </div>
+    <div class="feature-block">
+        <p class="features">Свойства</p>
+        <div class="dash-div">
+            <hr class="dash dash-white">
+        </div>
+        <div class="feature-item">
+            <span>Энергия</span>
+            <div class="dots-box">
+                <span class="dot filled"></span>
+                <span class="dot filled"></span>
+                <span class="dot filled"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        </div>
+        <div class="feature-item">
+            <span>Наглость</span>
+            <div class="dots-box">
+                <span class="dot filled"></span>
+                <span class="dot filled"></span>
+                <span class="dot filled"></span>
+                <span class="dot filled"></span>
+                <span class="dot"></span>
+            </div>
+        </div>
+        <div class="feature-item">
+            <span>Милота</span>
+            <div class="dots-box">
+                <span class="dot filled"></span>
+                <span class="dot filled"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="author">
+        <p class="author-name">Котэ
+            <br>Котовски</p>
+            <p class="job-title">Морда Шерстяная</p>
     </div>
 </div>
 
