add sass pred processor. finish basic context

--- a/CV/index.html
+++ b/CV/index.html
@@ -1,98 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
-    <link rel="stylesheet" href="./resources/css/main.css" link>
+    <link rel="stylesheet" href="./resources/scss/style.css" link>
 </head>
+
 <body>
-<div class="main-page">
-    <div class="left-color-box"></div>
-    <div class="photo">
-        <img class="avatar-img" src="/CV/resources/img/avatar.png" alt="avatar photo">
-    </div>
-    <div class="contact-block">
-        <p class="contact">Контакты</p>
-        <div class="dash-div">
-            <hr class="dash dash-white">
+    <div class="main-page">
+        <div class="left-color-box"></div>
+        <div class="photo">
+            <img class="avatar-img" src="/CV/resources/img/avatar.png" alt="avatar photo">
         </div>
-        <div class="phone">Телефон
-            <br> 8-800-MR-CAT
-        </div>
-        <div class="address">Мой адрес:
-            <br> не дом
-            <br> и не улица
-        </div>
-    </div>
-    <div class="about-me-block">
-        <p class="about-me">Обо мне</p>
-        <div class="dash-div">
-            <hr class="dash">
-        </div>
-        <div>Lorem ipsum dolor sit amet.
-            Nobis non alias omnis excepturi.
-            Deserunt soluta exercitationem numquam commodi?
-            Nisi nemo similique aperiam ipsam.
-            Voluptatem autem maiores quibusdam excepturi.
-            Praesentium facere delectus aperiam rem.
-        </div>
-    </div>
-    <div class="vaccine-block">
-        <p class="vaccine">Вакцинация</p>
-        <div class="dash-div">
-            <hr class="dash">
-        </div>
-        <span class="date-period">2019 - н.в</span>
-        <p class="vaccine-harmful">От вредности</p>
-        <span class="date-period">2019 - 2020</span>
-        <p class="vaccine-rabies">От бешенства</p>
-    </div>
-    <div class="feature-block">
-        <p class="features">Свойства</p>
-        <div class="dash-div">
-            <hr class="dash dash-white">
-        </div>
-        <div class="feature-item">
-            <span>Энергия</span>
-            <div class="dots-box">
-                <span class="dot filled"></span>
-                <span class="dot filled"></span>
-                <span class="dot filled"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
+        <div class="contact-block">
+            <p class="contact">Контакты</p>
+            <div class="dash-div">
+                <hr class="dash dash-white">
+            </div>
+            <div class="phone">Телефон
+                <br> 8-800-MR-CAT
+            </div>
+            <div class="address">Мой адрес:
+                <br> не дом
+                <br> и не улица
             </div>
         </div>
-        <div class="feature-item">
-            <span>Наглость</span>
-            <div class="dots-box">
-                <span class="dot filled"></span>
-                <span class="dot filled"></span>
-                <span class="dot filled"></span>
-                <span class="dot filled"></span>
-                <span class="dot"></span>
+        <div class="about-me-block">
+            <p class="about-me">Обо мне</p>
+            <div class="dash-div">
+                <hr class="dash">
+            </div>
+            <div class="about-me-text">Lorem ipsum dolor sit amet.
+                Nobis non alias omnis excepturi.
+                Deserunt soluta exercitationem numquam commodi?
+                Nisi nemo similique aperiam ipsam.
+                Voluptatem autem maiores quibusdam excepturi.
+                Praesentium facere delectus aperiam rem.
+            </div>
+            <p class="experience">Послужной список</p>
+            <div class="dash-div">
+                <hr class="dash">
             </div>
         </div>
-        <div class="feature-item">
-            <span>Милота</span>
-            <div class="dots-box">
-                <span class="dot filled"></span>
-                <span class="dot filled"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
+        <div class="vaccine-block">
+            <p class="vaccine">Вакцинация</p>
+            <div class="dash-div">
+                <hr class="dash">
+            </div>
+            <div class="vaccine-harmful">
+                <span class="date-period">2019 - н.в</span>
+                <p>От вредности</p>
+            </div>
+            <div class="vaccine-rabies">
+                <span class="date-period">2019 - 2020</span>
+                <p>От бешенства</p>
+            </div>
+        </div>
+        <div class="experience-date">
+            <div class="date-entry">2023 - now <br> Двор</div>
+            <div class="date-entry">2020 - 2023 <br> Дом</div>
+            <div class="date-entry">2019 - 2020 <br> Приют</div>
+        </div>
+        <div class="experience-desc">
+            <div>
+                <h4>Наглый дворовой котяра</h4>
+                <br>Lorem ipsum dolor sit amet.
+                Autem quo commodi ut quam?
+                Maxime, magnam minima. Suscipit, quasi?
+                Adipisci nemo quam autem dolore.
+                Recusandae quibusdam molestias dicta! Deleniti?
+            </div>
+            <div>
+                <h4>Кот домашний обыкновенный</h4>
+                <br> Lorem ipsum dolor sit amet.
+                Autem quo commodi ut quam?
+                Maxime, magnam minima. Suscipit, quasi?
+                Adipisci nemo quam autem dolore.
+                Recusandae quibusdam molestias dicta! Deleniti?
+            </div>
+            <div>
+                <h4>Котенок милый ласковый</h4>
+                <br> Lorem ipsum dolor sit amet.
+                Autem quo commodi ut quam?
+                Maxime, magnam minima. Suscipit, quasi?
+                Adipisci nemo quam autem dolore.
+                Recusandae quibusdam molestias dicta! Deleniti?
+            </div>
+        </div>
+        <div class="feature-block">
+            <p class="features">Свойства</p>
+            <div class="dash-div">
+                <hr class="dash dash-white">
+            </div>
+            <div class="feature-item">
+                <span>Энергия</span>
+                <div class="dots-box">
+                    <span class="dot filled"></span>
+                    <span class="dot filled"></span>
+                    <span class="dot filled"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+            <div class="feature-item">
+                <span>Наглость</span>
+                <div class="dots-box">
+                    <span class="dot filled"></span>
+                    <span class="dot filled"></span>
+                    <span class="dot filled"></span>
+                    <span class="dot filled"></span>
+                </div>
+            </div>
+            <div class="feature-item">
+                <span>Милота</span>
+                <div class="dots-box">
+                    <span class="dot filled"></span>
+                    <span class="dot filled"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+        </div>
+        <div class="experience-desc">
+            <div>
+                <h4>Наглый дворовой котяра</h4>
+                <br>Lorem ipsum dolor sit amet.
+                Autem quo commodi ut quam?
+                Maxime, magnam minima. Suscipit, quasi?
+                Adipisci nemo quam autem dolore.
+                Recusandae quibusdam molestias dicta! Deleniti?
+            </div>
+            <div>
+                <h4>Кот домашний обыкновенный</h4>
+                <br> Lorem ipsum dolor sit amet.
+                Autem quo commodi ut quam?
+                Maxime, magnam minima. Suscipit, quasi?
+                Adipisci nemo quam autem dolore.
+                Recusandae quibusdam molestias dicta! Deleniti?
+            </div>
+            <div>
+                <h4>Котенок милый ласковый</h4>
+                <br> Lorem ipsum dolor sit amet.
+                Autem quo commodi ut quam?
+                Maxime, magnam minima. Suscipit, quasi?
+                Adipisci nemo quam autem dolore.
+                Recusandae quibusdam molestias dicta! Deleniti?
+            </div>
+        </div>
+        <div class="skills-block">
+            <p class="skills">Навыки</p>
+            <div class="dash-div">
+                <hr class="dash dash-white">
+            </div>
+            <div class="skills-item-box">
+                <div class="skills-item">
+                    <span>Есть</span>
+                    <div class="dots-box">
+                        <span class="dot black"></span>
+                        <span class="dot black"></span>
+                        <span class="dot black"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                    </div>
+                </div>
+                <div class="skills-item">
+                    <span>Спать</span>
+                    <div class="dots-box">
+                        <span class="dot black"></span>
+                        <span class="dot black"></span>
+                        <span class="dot black"></span>
+                        <span class="dot black"></span>
+                        <span class="dot "></span>
+                    </div>
+                </div>
+                <div class="skills-item">
+                    <span>Орать</span>
+                    <div class="dots-box">
+                        <span class="dot black"></span>
+                        <span class="dot black"></span>
+                        <span class="dot "></span>
+                        <span class="dot "></span>
+                        <span class="dot "></span>
+                    </div>
+                </div>
+                <div class="skills-item">
+                    <span>Урчать</span>
+                    <div class="dots-box">
+                        <span class="dot black"></span>
+                        <span class="dot black"></span>
+                        <span class="dot black"></span>
+                        <span class="dot "></span>
+                        <span class="dot "></span>
+                    </div>
+                </div>
             </div>
         </div>
 
-
-    </div>
-
-    <div class="author">
-        <p class="author-name">Котэ
-            <br>Котовски</p>
+        <div class="author">
+            <p class="author-name">Котэ
+                <br>Котовски
+            </p>
             <p class="job-title">Морда Шерстяная</p>
+        </div>
     </div>
-</div>
 
 </body>
+
 </html>
