--- a/CV/index.html
+++ b/CV/index.html
@@ -10,19 +10,25 @@
 
 <body>
     <div class="main-page">
-        <div class="left-color-box"></div>
+        <div class="left-color-grid"></div>
         <div class="photo">
             <img class="avatar-img" src="/CV/resources/img/avatar.png" alt="avatar photo">
+        </div>
+        <div class="author-block">
+            <p class="author-name">Котэ
+                <br>Котовски
+            </p>
+            <p class="job-title">Морда Шерстяная</p>
         </div>
         <div class="contact-block">
             <p class="contact">Контакты</p>
             <div class="dash-div">
                 <hr class="dash dash-white">
             </div>
-            <div class="phone">Телефон
+            <div class="phone"><b><i>Телефон</i></b>
                 <br> 8-800-MR-CAT
             </div>
-            <div class="address">Мой адрес:
+            <div class="address"><b><i>Мой адрес:</i></b>
                 <br> не дом
                 <br> и не улица
             </div>
@@ -50,22 +56,22 @@
                 <hr class="dash">
             </div>
             <div class="vaccine-harmful">
-                <span class="date-period">2019 - н.в</span>
+                <span class="date-period"><b><i>2019 - н.в</i></b></span>
                 <p>От вредности</p>
             </div>
             <div class="vaccine-rabies">
-                <span class="date-period">2019 - 2020</span>
+                <span class="date-period"><b><i>2019 - 2020</i></b></span>
                 <p>От бешенства</p>
             </div>
         </div>
-        <div class="experience-date">
+        <div class="experience-date-grid">
             <div class="date-entry">2023 - now <br> Двор</div>
             <div class="date-entry">2020 - 2023 <br> Дом</div>
             <div class="date-entry">2019 - 2020 <br> Приют</div>
         </div>
-        <div class="experience-desc">
+        <div class="experience-desc-grid">
             <div>
-                <h4>Наглый дворовой котяра</h4>
+                <h4>Котяра наглый дворовой</h4>
                 <br>Lorem ipsum dolor sit amet.
                 Autem quo commodi ut quam?
                 Maxime, magnam minima. Suscipit, quasi?
@@ -122,32 +128,6 @@
                 </div>
             </div>
         </div>
-        <div class="experience-desc">
-            <div>
-                <h4>Наглый дворовой котяра</h4>
-                <br>Lorem ipsum dolor sit amet.
-                Autem quo commodi ut quam?
-                Maxime, magnam minima. Suscipit, quasi?
-                Adipisci nemo quam autem dolore.
-                Recusandae quibusdam molestias dicta! Deleniti?
-            </div>
-            <div>
-                <h4>Кот домашний обыкновенный</h4>
-                <br> Lorem ipsum dolor sit amet.
-                Autem quo commodi ut quam?
-                Maxime, magnam minima. Suscipit, quasi?
-                Adipisci nemo quam autem dolore.
-                Recusandae quibusdam molestias dicta! Deleniti?
-            </div>
-            <div>
-                <h4>Котенок милый ласковый</h4>
-                <br> Lorem ipsum dolor sit amet.
-                Autem quo commodi ut quam?
-                Maxime, magnam minima. Suscipit, quasi?
-                Adipisci nemo quam autem dolore.
-                Recusandae quibusdam molestias dicta! Deleniti?
-            </div>
-        </div>
         <div class="skills-block">
             <p class="skills">Навыки</p>
             <div class="dash-div">
@@ -195,13 +175,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="author">
-            <p class="author-name">Котэ
-                <br>Котовски
-            </p>
-            <p class="job-title">Морда Шерстяная</p>
         </div>
     </div>
 
