--- a/CV/index.html
+++ b/CV/index.html
@@ -14,7 +14,7 @@
         <div class="photo">
             <img class="avatar-img" src="/CV/resources/img/avatar.png" alt="avatar photo">
         </div>
-        <div class="author-block">
+        <div class="author-block" id="aa">
             <p class="author-name">Котэ
                 <br>Котовски
             </p>
@@ -177,7 +177,7 @@
             </div>
         </div>
     </div>
-
+<script src="test.js">simple-script</script>
 </body>
 
 </html>
